@@ -203,7 +203,9 @@ AC_REPLACE_FUNCS(\
 	valloc \
 	waitpid \
 )
-dnl Look for stat & lstat and replace with versions in lib/ when necessary.
+# Look for functions from gnulib and replace with versions in lib/ when
+# necessary.
+jm_FUNC_MALLOC
 jm_FUNC_STAT
 jm_FUNC_LSTAT
 
